completed media queries 1082px 768px

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <img src="./images/image-7.jpg" alt="Front view of our bike">
             </div>
             <div class="main-info-1">
-                <h3 class="pacifico">Our mission</h3>
+                <h3 class="pacifico mission">Our mission</h3>
                 <p class="catamaran main-info-p">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla pulvinar tortor elementum eleifend. Vestibulum consequat vestibulum felis pharetra luctus. Quisque interdum orci quis convallis dapibus. Vestibulum vitae tincidunt sem, a blandit sem. Quisque interdum orci.</p>
                 <button class="buttons read-more">
                     <a class="yellow" href="www.google.ca">READ MORE</a>
