--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <header class="header1">
         <section>
             <nav>
+                <div class="header-dropdown"><i class="fas fa-bars"></i></div>
                 <ul class="header-buttons">
                     <button class="nav-buttons">
                         <li> <a href="www.google.ca">Home</a> </li>
@@ -57,6 +58,9 @@
 <!-- main starts here -->
     <main>
         <section class="section-1 clearfix">
+            <div class="mobile-images">
+                <img src="./images/image-2.jpg" alt="Close up shot of an early bike run">
+            </div>
             <div class="main-info-1 grey">
                 <h3 class="pacifico">About us</h3>
                 <p class="catamaran main-info-p">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla pulvinar tortor elementum eleifend. Vestibulum consequat vestibulum felis pharetra luctus. Quisque interdum orci quis convallis dapibus. Vestibulum vitae tincidunt sem, a blandit sem. Quisque interdum orci.</p>
@@ -70,6 +74,9 @@
         </section>
         <section class="section-1">
             <div class="main-images">
+                <img src="./images/image-7.jpg" alt="Front view of our bike">
+            </div>
+            <div class="mobile-images">
                 <img src="./images/image-7.jpg" alt="Front view of our bike">
             </div>
             <div class="main-info-1">
