completed media queries 360px for mobile

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 <div class="section-3-pictures">
                     <img src="./images/image-8.jpg" alt="Little boy enjoying his bike">
                     <img src="./images/image-3.jpg" alt="Professional Biker doing a tour">
-                    <img src="./images/image-4.jpg" alt="Retro bike resting on an old home.">
+                    <img class="bike" src="./images/image-4.jpg" alt="Retro bike resting on an old home.">
                 </div>
             </div>
         </section>
