re-fixed the smaller media queries

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
 <!-- main starts here -->
     <main>
         <section class="section-1 clearfix">
-            <div class="mobile-images">
+            <figure class="mobile-images">
                 <img src="./images/image-2.jpg" alt="Close up shot of an early bike run">
-            </div>
+            </figure>
             <div class="main-info-1 grey">
                 <h3 class="pacifico">About us</h3>
                 <p class="catamaran main-info-p">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla pulvinar tortor elementum eleifend. Vestibulum consequat vestibulum felis pharetra luctus. Quisque interdum orci quis convallis dapibus. Vestibulum vitae tincidunt sem, a blandit sem. Quisque interdum orci.</p>
@@ -68,17 +68,17 @@
                     <a class="yellow" href="www.google.ca">READ MORE</a>
                 </button>
             </div>
-            <div class="main-images">
+            <figure class="main-images">
                 <img src="./images/image-2.jpg" alt="Close up shot of an early bike run">
-            </div>
+            </figure>
         </section>
         <section class="section-1">
-            <div class="main-images">
+            <figure class="main-images">
                 <img src="./images/image-7.jpg" alt="Front view of our bike">
-            </div>
-            <div class="mobile-images">
+            </figure>
+            <figure class="mobile-images">
                 <img src="./images/image-7.jpg" alt="Front view of our bike">
-            </div>
+            </figure>
             <div class="main-info-1">
                 <h3 class="pacifico mission">Our mission</h3>
                 <p class="catamaran main-info-p">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla pulvinar tortor elementum eleifend. Vestibulum consequat vestibulum felis pharetra luctus. Quisque interdum orci quis convallis dapibus. Vestibulum vitae tincidunt sem, a blandit sem. Quisque interdum orci.</p>
@@ -132,11 +132,11 @@
         <section class="section-3 clearfix">
             <div class="section-3-wrapper">
                 <h3 class="pacifico">The Gram</h3>
-                <div class="section-3-pictures">
+                <article class="section-3-pictures">
                     <img src="./images/image-8.jpg" alt="Little boy enjoying his bike">
                     <img src="./images/image-3.jpg" alt="Professional Biker doing a tour">
                     <img class="bike" src="./images/image-4.jpg" alt="Retro bike resting on an old home.">
-                </div>
+                </article>
             </div>
         </section>
     </main>
